# ENCE464-Fitness-Monitor

./: README.md
Group25/tests/: CMakeLists.txt  test_accl.c  test_accl_hal.c  test_adc.c  test_adc_hal.c  test_circular_buffer.c  test_example.c  test_fff.c  test_temp_hal.c
Group25/tests/mocks/: circBufF_mock.h  circBufV_mock.h  sysctl_mock.h
Group25/tests/mocks/tiva_mocks/: adc_mock.h  gpio_mock.h  i2c_driver_mock.h
